<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name">Project</string>
    <string name="crash_error_activity_error_occurred_explanation">Unhandled exception.</string>
    <string name="crash_error_activity_restart_app">Restart</string>
    <string name="crash_error_activity_error_details">Details</string>
    <string name="crash_error_activity_error_details_title">Exception Details</string>
    <string name="crash_error_activity_error_details_close">Close</string>
    <string name="crash_error_activity_error_details_copy">Copy</string>
    <string name="crash_error_activity_error_details_copied">Copied</string>
    <string name="crash_error_activity_error_details_clipboard_label">Crash info</string>
    <string name="crash_error_activity_out_of_memory">Out of RAM!</string>
    <string-array name="array_language_names">
        <item>Default</item>
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="array_language_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="night_mode_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>-1</item>
    </string-array>
    <string-array name="night_mode_names">
        <item>Off</item>
        <item>On</item>
        <item>Automatic</item>
        <item>Follow system</item>
    </string-array>
    <string-array name="theme_overlay_names">
        <item>Off</item>
        <item>Amoled</item>
        <item>Material 1</item>
    </string-array>
    <string-array name="theme_overlay_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_rendering_mode_names">
        <item>Software</item>
        <item>Hardware enabled</item>
        <item>Force Hardware</item>
    </string-array>
    <string-array name="array_rendering_mode_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_limit_cache_images_names" translatable="false">
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>128 MB</item>
        <item>256 MB</item>
        <item>512 MB</item>
        <item>1 GB</item>
    </string-array>
    <string-array name="array_limit_cache_images_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>128</item>
        <item>256</item>
        <item>512</item>
        <item>1024</item>
    </string-array>
    <string-array name="array_pager_transform_names" translatable="false">
        <item>Off</item>
        <item>Depth Transformer</item>
        <item>Zoom Out Transformer</item>
        <item>Clock Spin Transformer</item>
        <item>Background To Foreground Transformer</item>
        <item>Cube In Depth Transformer</item>
        <item>Fan Transformer</item>
        <item>Gate Transformer</item>
        <item>Slider Transformer</item>
    </string-array>
    <string-array name="array_pager_transform_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="picasso_dispatcher_names" translatable="false">
        <item>Handler</item>
        <item>Coroutine</item>
    </string-array>
    <string-array name="picasso_dispatcher_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="main">Main</string>
    <string name="button_back">Back</string>
    <string name="search_hint">Search</string>
    <string name="close">Close</string>
    <string name="search_options">Search Options</string>
    <string name="directory_is_empty">Directory is empty</string>
    <string name="error_timeout_message">Request timed out</string>
    <string name="error_unknown_host">No network connection</string>
    <string name="more_info">More info</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Yes</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_copy">Copy</string>
    <string name="not_permitted">Permissions not granted! Feature not available</string>
    <string name="click_back_to_exit">Click again to exit</string>
    <string name="success">Success</string>
    <string name="choose_theme_title">Color Palette</string>
    <string name="night_mode_title">Night mode</string>
    <string name="day_mode_title">Day mode</string>
    <string name="theme_overlay" translatable="false">Amoled/Material 1</string>
    <string name="font_size">Font size</string>
    <string name="dev_settings">For Developers</string>
    <string name="developer_mode">Developer mode</string>
    <string name="max_bitmap_resolution">Max bitmap resolution</string>
    <string name="max_thumb_resolution">Maximum cover resolution</string>
    <string name="rendering_mode">Image rendering mode</string>
    <string name="need_restart">Restart required</string>
    <string name="enable_dirs_files_count">Number of files in folder</string>
    <string name="cache_cleaner">Clear cache</string>
    <string name="settings">Settings</string>
    <string name="set_default">Reset</string>
    <string name="slidr_vertical_settings">Vertical settings:</string>
    <string name="slidr_horizontal_settings">Horizontal settings:</string>
    <string name="slidr_sensitive">Sensitivity %1$d</string>
    <string name="slidr_velocity_threshold">Velocity threshold %1$d</string>
    <string name="slidr_distance_threshold">Distance threshold %1$d</string>
    <string name="not_available">NOT AVAILABLE</string>
    <string name="theme_edit_title">Choosing a color theme</string>
    <string name="cancel">Cancel</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="formatted_date_tomorrow_clean">tomorrow at %1$s</string>
    <string name="formatted_date_yesterday_clean">yesterday at %1$s</string>
    <string name="photo_ext">Photo Extensions</string>
    <string name="audio_ext">Audio extensions</string>
    <string name="files_count_a">%1$d file</string>
    <string name="files_count_b">%1$d files</string>
    <string name="files_count_c">%1$d files</string>
    <string name="tags">Tags</string>
    <string name="export_settings">Export settings</string>
    <string name="import_settings">Import settings</string>
    <string name="import_export_settings">Import/Export</string>
    <string name="viewpager_page_transform">Viewpager2 animation</string>
    <string name="developer">Developer: Artem Umerov, 21IS3-z</string>
    <string name="select_file">Selection %1$s</string>
    <string name="select_folder">Select directory</string>
    <string name="biometric">Put your finger on the fingerprint reader</string>
    <string name="biometric_not_support">Fingerprint login not supported!</string>
    <string name="create_pin_code_title">Create a PIN</string>
    <string name="entered_pin_codes_do_not_match">Entered PIN codes do not match</string>
    <string name="pin_digit">Pin code</string>
    <string name="use_pin_title">Use PIN or fingerprint</string>
    <string name="button_1" translatable="false">1</string>
    <string name="button_2" translatable="false">2</string>
    <string name="button_3" translatable="false">3</string>
    <string name="button_4" translatable="false">4</string>
    <string name="button_5" translatable="false">5</string>
    <string name="button_6" translatable="false">6</string>
    <string name="button_7" translatable="false">7</string>
    <string name="button_8" translatable="false">8</string>
    <string name="button_9" translatable="false">9</string>
    <string name="button_0" translatable="false">0</string>
    <string name="repeat_pin_code_title">Repeat PIN</string>
    <string name="not_yet_implemented_message">Not implemented yet!</string>
    <string name="error_login_by_fingerprint_not_allowed">Fingerprint login not allowed</string>
    <string name="limit_exceeded_number_of_attempts_message">Input attempt limit exceeded</string>
    <string name="pin_is_invalid_message">Invalid PIN</string>
    <string name="security">Security</string>
    <string name="allow_fingerprint_title">Allow fingerprint</string>
    <string name="change_pin_title">Change PIN</string>
    <string name="ask_for_pin_on_application_start_title">PIN at startup</string>
    <string name="ask_for_pin_on_application_start_summary">Request PIN on application start</string>
    <string name="general_settings">General</string>
    <string name="reset_settings">Reset settings</string>
    <string name="wrong_settings_format">This settings format is not supported!</string>
    <string name="limit_cache_images">In-Memory Image Cache Limit</string>
    <string name="language_ui">Language</string>
    <string name="scan_qr">Scan QR</string>
    <string name="instant_photo_display">Instant photo display</string>
    <string name="picasso_dispatcher" translatable="false">Picasso3 dispatcher</string>
    <string name="slidr_settings">Slidr Settings</string>
    <string name="color_multi">Color Multi</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="letter_or_word">Letter or Word</string>
    <string name="try_letter">Try Letter</string>
    <string name="try_word">Try Word</string>
    <string name="attempts_count">Attempts %1$d</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="input_sum">Input Sum:</string>
    <string name="result">Result:</string>
    <string name="choose_a_currency">Choose a currency:</string>
    <string name="convert_to">Convert to:</string>
    <string name="purchase">Purchase</string>
    <string name="exchange_rate">Exchange rate</string>
    <string name="sale">Sale</string>
    <string name="calculate">Calculate</string>
    <string name="phone">Phone</string>
    <string name="mail">E-Mail</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="select">Select</string>
    <string name="select_image">Select image</string>
    <string name="attention">Attention</string>
    <string name="do_remove">Are you sure you want to remove %1$s?</string>
    <string name="open_with">Open with</string>
    <string name="share">Submit</string>
    <string name="fix_dir_time">Fix subfolder times</string>
    <string name="update_time">Set current time</string>
    <string name="rename">Rename</string>
    <string name="copy">Copy</string>
    <string name="cannot_delete_public_dir">Can\'t delete public dir</string>
    <string name="lastname">Lastname</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="born">Born</string>
    <string name="count">Count</string>
    <string name="unit">Unit</string>
    <string name="pieces">Pieces</string>
    <string name="liters">Liters</string>
    <string name="kilograms">Kilograms</string>
    <string name="grams">Grams</string>
    <string name="description">Description</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="terminate">Terminate</string>
    <string name="test_1">Test 1</string>
    <string name="test_2">Test 2</string>
    <string name="coin">Coin</string>
    <string name="is_incoming">Is incoming</string>
</resources>