<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:text="@string/color_multi"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textSize="22sp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/item_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/red"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:textSize="20sp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/item_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/green"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:textSize="20sp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/item_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/blue"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>